<resources>
    <string name="app_name">ReadyBaggage</string>
    <string name="lang">Idioma</string>


    <!--Idiomas-->
    <string name="spanish">Castellano</string>
    <string name="euskera">Euskera</string>
    <string name="english">Inglés</string>


    <!--Activity de login -->
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="registerTxt">¿Todavia no eres miembro?</string>
    <string name="registerTxtBtn">Regístrate</string>

    <!--Activity de registro -->
    <string name="nombre_reg">Nombre*</string>
    <string name="telefono_reg">Nº teléfono*</string>
    <string name="email_reg">Correo electrónico*</string>
    <string name="pass_reg">Contraseña*</string>

    <!--Comprobaciones registro y login-->
    <string name="nombre_error">Comprueba el nombre</string>
    <string name="telefono_error">Comprueba el telefono</string>
    <string name="email_error">Comprueba el correo electronico</string>
    <string name="pass_error">Comprueba la contraseña</string>

    <!--Perfil de usuario-->
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Nº teléfono</string>
    <string name="email">Correo electrónico</string>
    <string name="actualizar">Actualizar datos</string>
    <string name="cerrar">Cerrar sesión</string>


    <!--Botón de reserva-->
    <string name="reservar">Reservar</string>
    <!--Tipos de tarifa-->
    <string name="tamanoPeq">Maletas hasta 10kg</string>
    <string name="precioMenos10">
        Precio diurno: 8€
        \nPrecio nocturno: 12€
    </string>
    <string name="tamanoGran">Maletas a partir de 10kg</string>
    <string name="precioMas10">
        Precio diurno: 10€
        \nPrecio nocturno: 14€
    </string>
    <string name="tamanoExtra">Maletas a partir de 20kg</string>
    <string name="precioMas20">
        Precio diurno: 12€
        \nPrecio nocturno: 16€
    </string>

    <!--Activity de reserva-->
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="fecha_rec">Fecha de recogida</string>
    <string name="fecha_ent">Fecha de entrega</string>
    <string name="hora_rec">H. recogida</string>
    <string name="hora_ent">H. entrega</string>
    <string name="metodo_pago">Metodo de pago: </string>
    <string name="n_maletas">Numero de maletas: </string>
    <string name="antiguedad">Miembro desde: </string>
    <string name="subtotal">Sub Total: </string>
    <string name="iva">IVA</string>
    <string name="total">Total: </string>

    <!--Toasts de información-->
    <string name="no_reservas">No hay reservas que mostrar</string>
    <string name="modificar_reserva">Reserva modificada correctamente</string>
    <string name="errModificar_reserva">Error al modificar la reserva</string>
    <string name="log_cliente">Cliente logeado correctamente</string>
    <string name="errLogin">El usuario y/o la contraseña son incorrectas</string>
    <string name="reqLogin">Se requiere iniciar sesion para reservar</string>
    <string name="actDatos">Datos actualizados correctamente</string>
    <string name="errAct">ERROR: No se ha podido actualizar</string>
    <string name="errNo_cambios">No han habido cambios para actualizar</string>
    <string name="cerrar_sesion">Se ha cerrado correctamente la sesion</string>
    <string name="errCerrar_sesion">ERROR: No se ha podido cerrar sesion</string>
    <string name="bienvenido">Bienvenido </string>
    <string name="errRegistro">ERROR: Algo ha ido mal durante el registro, intentelo nuevamente</string>
    <string name="existeUsuario">ERROR: Ya existe un cliente con ese email</string>


    <!--Activity detalles reserva-->
    <string name="estadoReser">Estado actual</string>
    <string name="modReserva">Modificar reserva</string>
    <string name="estado0">Pendiente</string>
    <string name="estado1">En almacén</string>
    <string name="estado2">En entrega</string>
    <string name="estado3">Entregado</string>

    <!--Activity de contacto-->
    <string name="nosotros">Hola, somos ReadyBaggage</string>
    <string name="hnocturno">Servicio Nocturno</string>

    <!--Textos de error-->
    <string name="errOrigen">Escriba un lugar de origen</string>
    <string name="errDestino">Escriba un lugar de destino</string>
    <string name="errFechaRecogida">Seleccione una fecha de recogida</string>
    <string name="errFechaEntrega">Seleccione una fecha de entrega</string>
    <string name="errHoraRecogida">Seleccione una hora de recogida</string>
    <string name="errHoraEntrega">Seleccione una hora de entrega</string>
    <string name="errHoraDiferencia">Debe haber al menos 2 horas de diferencia</string>


</resources>