<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="268dp"
            android:background="@drawable/roundededittext"
            android:ems="10"
            android:hint="@string/user"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginViewBtnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/editPass"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editPass"
            app:layout_constraintTop_toBottomOf="@+id/editPass" />

        <EditText
            android:id="@+id/editPass"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/roundededittext"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/editUsername"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editUsername"
            app:layout_constraintTop_toBottomOf="@+id/editUsername" />

        <TextView
            android:id="@+id/loginViewTextReg"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="180dp"
            android:gravity="fill"
            android:text="@string/registerTxt"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/loginViewTextRegBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginViewBtnLogin" />

        <TextView
            android:id="@+id/loginViewTextRegBtn"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="88dp"
            android:gravity="fill"
            android:text="@string/registerTxtBtn"
            android:textColor="@color/regTxtBtnColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginViewBtnLogin" />

        <TextView
            android:id="@+id/regViewTxtTitle"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="Ready Baggage"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@+id/editUsername"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>