<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/source_sans_pro"
        android:text="LOGO"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btIdiomas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/lang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/include4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1900dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mainViewImgProduct1"
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/maleta_pequenia" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="57dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMenos10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/source_sans_pro"
                        android:text="@string/tamanoPeq"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tvPrecioMenos10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/source_sans_pro"
                        android:text="@string/precioMenos10"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/reservaMenos10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reservar" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mainViewImgProduct2"
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/maleta_grande" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="57dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvMas10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/source_sans_pro"
                        android:text="@string/tamanoGran"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tvPrecioMas10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/source_sans_pro"
                        android:text="@string/precioMas10"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/reservaMas10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reservar" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="222dp"
                android:layout_margin="30dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/mainViewImgProduct3"
                        android:layout_width="300dp"
                        android:layout_height="200dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/maleta_extra" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="57dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="25dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv2Mas10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/source_sans_pro"
                        android:text="@string/tamanoExtra"
                        android:textColor="#000000"
                        android:textSize="24sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv2PrecioMas10"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:fontFamily="@font/source_sans_pro"
                        android:text="@string/precioMas20"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/reservaMas20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/reservar" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/include4"
        layout="@layout/menu_inferior"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" /><![CDATA[





=======
    >>>>>>> Stashed changes


]]>
</androidx.constraintlayout.widget.ConstraintLayout>